created section `About us` , added images for this section, styles

--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,26 @@
 </head>
 <body>
 	
+	<section class="aboutUs">
+		<div class="container">
+			<div class="row">
+				<div class="col-md-6 aboutUs_text">
+					<h2 class="subtitle">Perfect Solution For
+						Your Business</h2>
+					<div class="text">Distinctively exploit optimal alignments for intuitive bandwidth. Quickly
+						coordinate e-business applications through revolutionary catalysts for
+						chang the Seamlessly underwhelm optimal testing procedures.</div>
+					<button class="">Learn More</button>
+				</div>
+				<div class="col-md-6">
+					<div class="aboutUs_img">
+						<img src="img/about_us/macbook.png" alt="mackbook">
+					</div>
+				</div>
+			</div>
+			
+		</div>
+	</section>
 
 	<script src=""></script>
 </body>
