created section Features, added icons for this section, styles, fixed CSS in section About us

--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,8 +10,9 @@
 	<link rel="stylesheet" href="css/style.css">
 	<title>GrowBe</title>
 </head>
+
 <body>
-	
+
 	<section class="aboutUs">
 		<div class="container">
 			<div class="row">
@@ -28,10 +30,45 @@
 					</div>
 				</div>
 			</div>
-			
+
+		</div>
+	</section>
+
+	<section class="features">
+		<div class="container">
+			<div class="features_wrapper">
+				<div class="features_item">
+					<div class="feature_icon coral">
+						<img class="icon" src="icons/features/feature_icon_1.svg" alt="vector">
+					</div>
+					<h3 class="features_title">Grow Your Business</h3>
+					<div class="features_text">Leverage agile frameworks to provide a robust synopsis for high level
+						overviews.</div>
+					<a href="" class="features_more">Read More...</a>
+				</div>
+				<div class="features_item">
+					<div class="feature_icon green">
+						<img class="icon" src="icons/features/feature_icon_2.svg" alt="flash">
+					</div>
+					<h3 class="features_title">Get Quality Ieads</h3>
+					<div class="features_text">Leverage agile frameworks to provide a robust synopsis for high level
+						overviews.</div>
+					<a href="" class="features_more">Read More...</a>
+				</div>
+				<div class="features_item">
+					<div class="feature_icon yellow">
+						<img class="icon" src="icons/features/feature_icon_3.svg" alt="pricetag">
+					</div>
+					<h3 class="features_title">Drive More Sales</h3>
+					<div class="features_text">Leverage agile frameworks to provide a robust synopsis for high level
+						overviews.</div>
+					<a href="" class="features_more">Read More...</a>
+				</div>
+			</div>
 		</div>
 	</section>
 
 	<script src=""></script>
 </body>
+
 </html>
