navigation and CSS for this section

--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,28 @@
 </head>
 
 <body>
+	<header class="header">
+		<div class="container">
+			<div class="logo_wrp">
+				<img src="img/logo.svg" alt="logo">
+			</div>
+			<nav class="header_nav">
+				<ul class="header_menu">
+					<!-- !! когда будут готовы секции - сделать яякорные ссылки на них вместо заглушек -->
+					<li><a class="active" href="#">Home</li></a>
+					<li><a href="#">About Us</li></a>
+					<li><a href="#">Services</li></a>
+					<!-- ! в элементе Features сделать опцию dropdown -->
+					<li><a href="#">Features</li></a>
+					<li><a href="#">Team</li></a>
+					<li><a href="#">Blog</li></a>
+					<li><a href="#">Contact</li></a>
+					<li><a href="#">Get Started</li></a>
+				</ul>
+				<!-- <a href=""></a> -->
+			</nav>
+		</div>
+	</header>
 
 	<section class="aboutUs">
 		<div class="container">
