update css in this block

--- a/src/index.html
+++ b/src/index.html
@@ -12,28 +12,51 @@
 </head>
 
 <body>
-	<header class="header">
+
+	<section class="homePage">
 		<div class="container">
-			<div class="logo_wrp">
-				<img src="img/logo.svg" alt="logo">
-			</div>
-			<nav class="header_nav">
-				<ul class="header_menu">
-					<!-- !! когда будут готовы секции - сделать яякорные ссылки на них вместо заглушек -->
-					<li><a class="active" href="#">Home</li></a>
-					<li><a href="#">About Us</li></a>
-					<li><a href="#">Services</li></a>
-					<!-- ! в элементе Features сделать опцию dropdown -->
-					<li><a href="#">Features</li></a>
-					<li><a href="#">Team</li></a>
-					<li><a href="#">Blog</li></a>
-					<li><a href="#">Contact</li></a>
-					<li><a href="#">Get Started</li></a>
-				</ul>
-				<!-- <a href=""></a> -->
-			</nav>
+			<header class="header">
+				<div class="header_wrp">
+					<div class="logo_wrp">
+						<img src="img/logo.svg" alt="logo">
+					</div>
+					<nav class="header_nav">
+						<ul class="header_menu">
+							<!-- TODO: когда будут готовы секции - сделать яякорные ссылки на них вместо заглушек -->
+							<li><a class="active" href="#">Home</li></a>
+							<li><a href="#">About Us</li></a>
+							<li><a href="#">Services</li></a>
+							<!-- TODO: в элементе Features сделать опцию dropdown -->
+							<li><a href="#">Features</li></a>
+							<li><a href="#">Team</li></a>
+							<li><a href="#">Blog</li></a>
+							<li><a href="#">Contact</li></a>
+							<li><a href="#">Get Started</li></a>
+						</ul>
+					</nav>
+				</div>
+			</header>
+
+			<section class="home">
+				<div class="home_wrp">
+					<!-- <div class="row intro"> -->
+						<!-- <div class="col-md-6 intro_wrp"> -->
+							<h1 class="title">SEO & Digital <span class="ellipse">Marketing</span> For Your Website.</h1>
+							<div class="text">Provide all kind of seo services and help to improve seo ranking. Globally incubate standards.</div>
+							<div class="interactive">
+								<a href="#">Start Now</a>
+								<div class="video">
+									<img src="icons/watch.svg" alt="watch video's button">
+									<div class="descr">Watch Video</div>
+								</div>
+							</div>
+						<!-- </div> -->
+						<!-- <div class="col-md-6"></div> -->
+					<!-- </div> -->
+				</div>
+			</section>
 		</div>
-	</header>
+	</section>
 
 	<section class="aboutUs">
 		<div class="container">
