finish the section Home HTML and Sass

--- a/src/index.html
+++ b/src/index.html
@@ -40,21 +40,20 @@
 
 			<section class="home">
 				<div class="home_wrp">
-					<!-- <div class="row intro"> -->
-						<!-- <div class="col-md-6 intro_wrp"> -->
-							<h1 class="title">SEO & Digital <span class="ellipse">Marketing</span> For Your Website.</h1>
-							<div class="text">Provide all kind of seo services and help to improve seo ranking. Globally incubate standards.</div>
-							<div class="interactive">
-								<a href="#">Start Now</a>
-								<div class="video">
-									<img src="icons/watch.svg" alt="watch video's button">
-									<div class="descr">Watch Video</div>
-								</div>
-							</div>
-						<!-- </div> -->
-						<!-- <div class="col-md-6"></div> -->
-					<!-- </div> -->
+					<h1 class="title">SEO & Digital <span class="ellipse">Marketing</span> For Your Website.</h1>
+					<div class="home_text">Provide all kind of seo services and help to improve seo ranking. Globally incubate standards.</div>
+					<div class="interactive">
+						<a href="#" class="start_btn">Start Now</a>
+						<div class="watch">
+							<a href="#" class="watch_round"><img src="icons/watch.svg" alt="watch video's button"></a>
+							<div class="watch_descr">Watch Video</div>
+						</div>
+					</div>
+					<div class="home_picture">
+						<img src="img/home_big_picture.png" alt="home picture">
+					</div>
 				</div>
+				<!-- TODO: добавить абсолютными цветные элементы разных форм на главном экране -->
 			</section>
 		</div>
 	</section>
