created section Brands, added images for this section, styles

--- a/src/index.html
+++ b/src/index.html
@@ -38,7 +38,7 @@
 				</div>
 			</header>
 
-			<section class="home">
+			<div class="home">
 				<div class="home_wrp">
 					<h1 class="title">SEO & Digital <span class="ellipse">Marketing</span> For Your Website.</h1>
 					<div class="home_text">Provide all kind of seo services and help to improve seo ranking. Globally incubate standards.</div>
@@ -54,7 +54,21 @@
 					</div>
 				</div>
 				<!-- TODO: добавить абсолютными цветные элементы разных форм на главном экране -->
-			</section>
+			</div>
+
+		</div>
+	</section>
+
+	<section class="brands">
+		<div class="container">
+			<div class="brands_wrp">
+				<img src="img/brands/brand_logo_1.png" alt="Liva logo">
+				<img src="img/brands/brand_logo_2.png" alt="Kanba logo">
+				<img src="img/brands/brand_logo_3.png" alt="Amara logo">
+				<img src="img/brands/brand_logo_4.png" alt="Aven. logo">
+				<img src="img/brands/brand_logo_5.png" alt="HexLab logo">
+				<img src="img/brands/brand_logo_6.png" alt="Kanba logo">
+			</div>
 		</div>
 	</section>
 
